yamls/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-a-egress-policy
spec:
  podSelector:
    matchLabels:
      app: service-a
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: service-b
